--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "weather",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "bin": "./index.js",
+  "main": "weather.js",
+  "bin": {
+    "weather": "weather.js"
+  },
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.3"
+    "axios": "^1.2.3",
+    "chalk": "^5.2.0",
+    "dedent-js": "^1.0.1"
   }
 }
